# django-book

./: .dockerignore  .env.prod  .env.prod.example  .env.prod.local  .gitignore  Dockerfile  Dockerfile.development  LICENSE  Makefile  README.md  docker-compose.backup.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  example.env  example.env.prod  init-db.sh  locustfile.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  deploy.yml
backup/: Dockerfile
backup/scripts/: backup.sh  restore.sh  upload_to_s3.py
certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/1408d12178f280509f15e200192683ab/: meta.json  private_key.json  regr.json
conduit/: __init__.py  locustfile.py  manage.py  middleware.py  pytest.ini  urls.py
conduit/articles/: apps.py  filters.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
conduit/articles/migrations/: 0001_initial.py  0002_article_author_published_articles.py  0003_alter_article_favorites.py  0004_article_metadata_alter_article_created.py  0005_article_image.py
conduit/comments/: apps.py  consumers.py  forms.py  models.py  routing.py  serializers.py  signals.py  tests.py  urls.py  views.py
conduit/comments/migrations/: 0001_initial.py
conduit/compressor/: compresor.py
conduit/config/: asgi.py  database_routers.py  settings.py  urls.py  wsgi.py
conduit/config/settings/: __init__.py  base.py  development.py  production.py
conduit/core/: metrics.py  mixins.py  models.py  utils.py  views.py
conduit/profiles/: apps.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
conduit/profiles/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_date_joined_and_more.py  0003_user_first_name_user_last_name.py  0004_remove_user_created_at_remove_user_first_name_and_more.py  0005_alter_user_name.py  0006_user_is_active.py
conduit/static/css/: main.css
conduit/static/js/: comment-consumer.js
conduit/staticfiles/CACHE/: manifest.json
conduit/templates/: base.html  base_nav.html  user_nav.html
conduit/templates/articles/: _article.html  _article_form.html  _article_list.html  _favorite_action.html  _favorite_btn.html  article.html  article_form.html  home.html
conduit/templates/comments/: _comment.html  _comment_form.html
conduit/templates/profiles/: _follow_btn.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  profile.html  register.html
conduit/templates/two_factor/: _base.html
conduit/tests/: conftest.py  factories.py  test_api.py  test_factories.py  test_integration.py  test_models.py  test_templates.py  test_views.py
config/: __init__.py  asgi.py  database_routers.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
nginx/: Dockerfile  conduit.conf  entrypoint.sh  nginx.conf  nginx.conf.template  nginx.initial.template
nginx/conf.d/: app.conf  brandfocus.conf  nginx.conf  ssl.conf.template
nginx/templates/: http.conf.template  https.conf.template  init.conf.template
postgres/: postgresql.conf
postgres/ssl/: server.crt
postgres/ssl/postgresql/: server.key
prometheus/: prometheus.yml
scripts/: get_ssl.sh  run_tests.sh  setup_postgres_ssl.sh  setup_ssl.sh
scripts/ssl/: init-letsencrypt.sh
